fixed variety of bugs on mobile

--- a/packages/navigate-theme/src/styles/components/_green-bar.scss
+++ b/packages/navigate-theme/src/styles/components/_green-bar.scss
@@ -45,6 +45,11 @@
 
     & > h2 {
       align-self: center;
+
+      @include respond(phone) {
+        font-size: 1.4rem;
+        margin-top: 1.5rem;
+      }
     }
   }
 
